--- a/resources/assets/sass/_david.scss
+++ b/resources/assets/sass/_david.scss
@@ -195,7 +195,9 @@ select {
     }
   }
 }
-
+[contenteditable=true]{
+  background: rgba(0, 128, 0, 0.09);
+}
 .course-navigation {
   .topics_heading{
     font-weight: bolder;
