--- a/public/css/app.css
+++ b/public/css/app.css
@@ -54,6 +54,21 @@ h6,
   padding: 1rem 0;
 }
 
+.cart-d-title h2,
+.cart-d-title h1,
+.cart-d-title h3,
+.cart-d-title h4 {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+
+.cart-d-title .icon {
+  line-height: 0rem;
+  letter-spacing: 3rem;
+  font-size: 5rem;
+}
+
 .cart-d-table {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -70,11 +85,41 @@ h6,
 
 .cart-d-table table thead td {
   text-align: center;
+  font-weight: bolder;
 }
 
 .cart-d-table table td {
   padding: 1rem;
   border: 1px solid #2960a2;
+}
+
+.cart-d-table table td a img {
+  width: 1rem;
+  margin-left: 0.3rem;
+}
+
+.cart-d-table table td:last-child,
+.cart-d-table table td:first-child {
+  text-align: center;
+}
+
+.cart-d .buy-btn {
+  text-align: right;
+  margin-right: 8rem;
+  margin-top: 2rem;
+}
+
+.cart-d .buy-btn .whole_price {
+  color: var(--color);
+  text-shadow: 1px 1px 1px black;
+}
+
+.cart-d .buy-btn .btn {
+  font-size: 2rem;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0 auto;
 }
 
 .add-course-wrapper {
