--- a/resources/assets/sass/_david.scss
+++ b/resources/assets/sass/_david.scss
@@ -26,14 +26,23 @@ $dark:#2e3942;
 .mce-notification, .mce-branding {
   display: none !important;
 }
+
+
 .cart-d{
   padding: 5rem 0;
   min-height: 50vh;
-  //background-color: rgba(83, 250, 205, 0.18);
   &-title{
     color:var(--color);
     text-align: center;
     padding: 1rem 0;
+    h2,h1,h3,h4{
+      display: inline-flex;
+    }
+    .icon{
+      line-height: 0rem;
+      letter-spacing: 3rem;
+      font-size: 5rem;
+    }
   }
   &-table{
     display: flex;
@@ -41,17 +50,41 @@ $dark:#2e3942;
     table{
       border-collapse: collapse;
       width: 80%;
-
       thead td{
         text-align: center;
+        font-weight: bolder;
       }
       td{
         padding: 1rem;
         border: 1px solid darken( $color , 20% );
+        a img{
+          width: 1rem;
+          margin-left: 0.3rem;
+        }
+        &:last-child, &:first-child{
+          text-align: center;
+        }
+
       }
     }
   }
+  .buy-btn{
+    text-align: right;
+    margin-right: 8rem;
+    margin-top: 2rem;
+    .whole_price{
+      color:var(--color);
+      text-shadow: 1px 1px 1px black;
+    }
+    .btn{
+      font-size: 2rem;
+      display: inline-flex;
+      margin: 0 auto;
+    }
+  }
 }
+
+
 .add-course-wrapper {
   padding: 5rem;
   font-size: 1.2rem;
