--- a/public/css/app.css
+++ b/public/css/app.css
@@ -122,6 +122,34 @@ h6,
   margin: 0 auto;
 }
 
+.cart-d .go-back {
+  border: 1px solid var(--color);
+  border-radius: 2rem;
+  padding: 5px 20px 5px 45px;
+  display: inline-block;
+  position: relative;
+  left: 125px;
+  top: -35px;
+}
+
+.cart-d .go-back a {
+  color: var(--color);
+}
+
+.cart-d .go-back:before {
+  content: '<<';
+  display: block;
+  position: absolute;
+  left: 20px;
+  color: var(--color);
+}
+
+.search-items .course-block-intro .study-cart-white {
+  position: relative;
+  top: 2px;
+  left: 0px;
+}
+
 .search-items .course-block-intro .btn.btn-blue.start-button {
   font-size: 1.3rem;
 }
