--- a/resources/assets/sass/_david.scss
+++ b/resources/assets/sass/_david.scss
@@ -2,8 +2,9 @@
   --color: #5b93d6;
   --dark: #2e3942;
 }
-$color:#5b93d6;
-$dark:#2e3942;
+
+$color: #5b93d6;
+$dark: #2e3942;
 //@font-face {
 //  font-family: head;
 //  src: url(fonts/bpg-mrgvlovani-caps-webfont.woff) format('woff');
@@ -27,79 +28,102 @@ $dark:#2e3942;
   display: none !important;
 }
 
-
-.cart-d{
+.cart-d {
   padding: 5rem 0;
   min-height: 50vh;
-  &-title{
-    color:var(--color);
+  &-title {
+    color: var(--color);
     text-align: center;
     padding: 1rem 0;
-    h2,h1,h3,h4{
+    h2, h1, h3, h4 {
       display: inline-flex;
     }
-    .icon{
+    .icon {
       line-height: 0rem;
       letter-spacing: 3rem;
       font-size: 5rem;
     }
   }
-  &-table{
+  &-table {
     display: flex;
     justify-content: center;
-    table{
+    table {
       border-collapse: collapse;
       width: 80%;
-      thead td{
+      thead td {
         text-align: center;
         font-weight: bolder;
       }
-      td{
+      td {
         padding: 1rem;
-        border: 1px solid darken( $color , 20% );
-        a img{
+        border: 1px solid darken($color, 20%);
+        a img {
           width: 1rem;
           margin-left: 0.3rem;
         }
-        &:last-child, &:first-child{
+        &:last-child, &:first-child {
           text-align: center;
         }
       }
     }
   }
-  .buy-btn{
+  .buy-btn {
     text-align: right;
     margin-right: 8rem;
     margin-top: 2rem;
-    .whole_price{
-      color:var(--color);
+    .whole_price {
+      color: var(--color);
       text-shadow: 1px 1px 1px black;
     }
-    .btn{
+    .btn {
       font-size: 2rem;
       display: inline-flex;
       margin: 0 auto;
     }
   }
+  .go-back {
+    border: 1px solid var(--color);
+    border-radius: 2rem;
+    padding: 5px 20px 5px 45px;
+    display: inline-block;
+    position: relative;
+    left: 125px;
+    top: -35px;
+    a {
+      color: var(--color);
+    }
+    &:before {
+      content: '<<';
+      display: block;
+      position: absolute;
+      left: 20px;
+      color: var(--color);
+    }
+  }
 }
 
-.search-items{
-  .course-block-intro{
-    .btn.btn-blue.start-button{
-      font-size:1.3rem;
+.search-items {
+  .course-block-intro {
+    .study-cart-white {
+      position: relative;
+      top: 2px;
+      left: 0px;
     }
-    .course-stars{
+    .btn.btn-blue.start-button {
+      font-size: 1.3rem;
+    }
+    .course-stars {
       margin: -15px 0 10px 0;
     }
-    h4,h5{
+    h4, h5 {
       margin: 0;
-      &:first-of-type{
-        margin-top:15px;
-        text-decoration:line-through;
-        color:gray;
+      &:first-of-type {
+        margin-top: 15px;
+        text-decoration: line-through;
+        color: gray;
       }
     }
-    .more-info{
+    .more-info {
       background-color: dimgrey;
       color: white;
       display: inline-block;
@@ -112,8 +136,6 @@ $dark:#2e3942;
   }
 }
 
-
-
 .add-course-wrapper {
   padding: 5rem;
   font-size: 1.2rem;
@@ -122,64 +144,63 @@ $dark:#2e3942;
     -webkit-appearance: none;
     margin: 0;
   }
-  .for-time, .price-money{
+  .for-time, .price-money {
     margin-top: 20px;
-    input{
+    input {
       margin-top: 1rem;
     }
   }
-  input[type=number]{
+  input[type=number] {
     background: #f8f8f8;
   }
 
   .choose_category {
     ul {
-
       height: 220px;
-      [type=checkbox]:checked+label:before, [type=checkbox]:not(:checked)+label:before{
-        top:2px;
+      [type=checkbox]:checked + label:before, [type=checkbox]:not(:checked) + label:before {
+        top: 2px;
       }
-      [type=checkbox]:checked+label:after, [type=checkbox]:not(:checked)+label:after{
-        top:5px;
-      }
+      [type=checkbox]:checked + label:after, [type=checkbox]:not(:checked) + label:after {
+        top: 5px;
       }
     }
+  }
 
-p {
-  font-size: inherit;
-  margin: 1rem 0;
-}
+  p {
+    font-size: inherit;
+    margin: 1rem 0;
+  }
 
-img {
-  cursor: pointer;
-  position: relative;
-  top: 0px;
-  left: 10px;
-}
-
-input {
-  &[type='submit'] {
-    background: #2e3942;
-    color: white;
+  img {
     cursor: pointer;
-    margin: 1.4rem 0;
-    border-radius: 3px;
+    position: relative;
+    top: 0px;
+    left: 10px;
   }
-  &[type='file'] {
-    z-index: -1;
-    opacity: 0;
-    position: absolute;
-  }
-  &[type='text'] {
-    border: 1px solid #3a5670;
-    border-radius: 3px;
-    display: inline;
-  }
-}
 
-select {
-  background: rgb(248, 248, 248);
-}
+  input {
+    &[type='submit'] {
+      background: #2e3942;
+      color: white;
+      cursor: pointer;
+      margin: 1.4rem 0;
+      border-radius: 3px;
+    }
+    &[type='file'] {
+      z-index: -1;
+      opacity: 0;
+      position: absolute;
+    }
+    &[type='text'] {
+      border: 1px solid #3a5670;
+      border-radius: 3px;
+      display: inline;
+    }
+  }
+
+  select {
+    background: rgb(248, 248, 248);
+  }
 
 }
 
@@ -282,40 +303,42 @@ select {
     }
   }
 }
-[contenteditable=true]{
+
+[contenteditable=true] {
   background: rgba(0, 128, 0, 0.09);
 }
+
 .course-navigation {
-  .topics_heading{
+  .topics_heading {
     font-weight: bolder;
   }
-  form{
-    input[type=submit]{
+  form {
+    input[type=submit] {
       position: relative;
-      left:50%;
-      transform:translate(-50%);
+      left: 50%;
+      transform: translate(-50%);
     }
   }
   input[type="text"] {
     background: #d9dee294;
     outline: #2e394238 solid 2px;
   }
-  ol{
-    li{
+  ol {
+    li {
       display: flex;
       justify-content: space-between;
       align-items: center;
       position: relative;
-      span{
+      span {
         position: absolute;
         top: 50%;
         right: 10px;
-        transform:translateY(-40%);
+        transform: translateY(-40%);
         color: #880000;
         transition: all .2s ease-in-out;
         font-weight: bolder;
-        &:hover{
-          color:white;
+        &:hover {
+          color: white;
         }
       }
     }
@@ -326,8 +349,8 @@ select {
   [data-dismiss], [data-toggle], [data-target], .pointer {
     cursor: pointer;
   }
-  h1{
-    input{
+  h1 {
+    input {
       display: inline-block;
       width: max-content;
     }
@@ -344,27 +367,33 @@ select {
       font-size: $size;
     }
 
-    .edit,.paste,.remove{
+    .edit, .paste, .remove {
       position: relative;
-      img{
+      img {
         position: relative;
-        width:20px;
+        width: 20px;
         z-index: 1;
       }
-      &::after{
+      &::after {
         z-index: 0;
         display: block;
         position: absolute;
         color: #2e394282;
         bottom: 25%;
         left: 50%;
-        transform: translate(-50%,-50%);
+        transform: translate(-50%, -50%);
         text-shadow: 1px 1px 0px white, 1px 1px 0px black;
       }
     }
-    .edit::after{ content: 'edit';}
-    .paste::after{ content: 'paste'}
-    .remove::after{ content: 'remove';}
+    .edit::after {
+      content: 'edit';
+    }
+    .paste::after {
+      content: 'paste'
+    }
+    .remove::after {
+      content: 'remove';
+    }
     p {
       margin: 0 auto;
     }
